# qt-locator-debugger

./: .gitignore  AGENTS.md  CLAUDE.md  alembic.ini  icon.icns  main.py  pyproject.toml
.github/workflows/: release.yml
app/: logger.py  utils.py
app/measurement/: controller.py
app/models/: db.py  domain.py
app/schedule/: manager.py
app/serial/: manager.py  parser.py  worker.py
app/serial/parsers/: laser.py
app/storage/: repository.py
app/ui/: device_list_panel.py  device_panel.py  history_page.py  laser_card.py  main_window.py  measurement_panel.py  schedule_page.py
docs/: device-integration-guide.md
docs/superpowers/specs/: 2026-04-02-device-card-enhancements-design.md
migrations/: env.py
migrations/versions/: 19637f07036c_init.py  2e50a5cedcf0_add_step_port_config_to_devices.py  a1b2c3d4e5f6_add_port_config_to_devices.py  b3c4d5e6f7a8_add_measurement_tables.py  c5d6e7f8a9b0_add_paused_step_index.py  d6e7f8a9b0c1_add_elapsed_s_to_measurement_points.py  e7f8a9b0c1d2_add_baseline_distance_to_sessions.py
tests/: test_measurement_panel.py  test_schedule_manager.py  test_schedule_page.py
tests/schedule/: test_manager.py
