[project]
name = "qt-locator-debugger"
version = "0.1.0"
description = "Multi-port serial debugger for sensor devices"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyside6>=6.11.0",
    "pyserial-asyncio>=0.6",
    "loguru>=0.7",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "pyside6-fluent-widgets[full]>=1.11.1",
    "pyqtgraph>=0.13",
    "croniter>=6.0",
]

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
]
